--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.24.1",
     "chalk": "^1.0.0",
+    "request": "^2.79.0",
+    "yeoman-generator": "^0.24.1",
     "yosay": "^1.0.0"
   },
   "devDependencies": {
